Fix Jpms test (#28726)
* Fix Jpms test

* Configure main src also compile in specified Java ver

* Fix Java11 case